--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="preconnbect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="./assets/css/all.min.css">
 <link rel="stylesheet" href="./assets/css/fontawesome.css">
@@ -22,7 +22,7 @@
             <li><a href=""><i class="fa-solid fa-check"></i>&nbsp;Check Out</a></li>
         </ul>
         <select name="" id="" class="language">
-            <option value=""><img src="./assets/images/index.jpg" alt=""> English</option>
+            <option value=""><img src="./assets/images/index (1).jpg" alt=""> English</option>
             <option value="">Bangla</option>
             <option value="">Hindi</option>
         </select>
@@ -69,7 +69,7 @@
             <span style="font-size: 10pt;">Check out option</span><br><br>
             <input type="radio">&nbsp;&nbsp;REGISTER ACCOUNT <br><br>
             <input type="radio">&nbsp;&nbsp;GUEST ACCOUNT <br><br>
-            <span style="font-size: 10pt;">Lorem ipsum dolor sit amet, consec tetur adipisicing <br>  elit. Nisi totam nam nostrum quia .</span>
+            <span style="font-size: 10pt;">Lorem ipsum dolor sit amet, consec tetur adipisicing <br>  elit.</span>
         </div>
         <div>
             <div class="send container">
@@ -135,7 +135,7 @@
             <div class="info container">
                 <button><span style="color: white ; font-size:15pt;">BY PRICE</span></button>
                 <ul>
-                    <li><i class="fa-solid fa-caret-right"></i>&nbsp;$1000-$2000</li>
+                    <li><i class="fas fa-caret-square-right"></i>&nbsp;$1000-$2000</li>
                     <li><i class="fa-solid fa-caret-right"></i>&nbsp;$3000-$4000</li>
                     <li><i class="fa-solid fa-caret-right"></i>&nbsp;$5000-$6000</li>
                     <li><i class="fa-solid fa-caret-right"></i>&nbsp;$7000-$8000</li>
@@ -176,12 +176,12 @@
     </button>
 </div>
 <div class="logos">
-    <img src="./assets/images/logo1.jpg" alt="">
-    <img src="./assets/images/logo2.jpg" alt="">
-    <img src="./assets/images/logo3.jpg" alt="">
-    <img src="./assets/images/logo1.jpg" alt="">
-    <img src="./assets/images/logo5.jpg" alt="">
-    <img src="./assets/images/logo6.jpg" alt="">
+    <img src="./assets/images/logo1 (1).jpg" alt="">
+    <img src="./assets/images/logo2 (1).jpg" alt="">
+    <img src="./assets/images/logo3 (1).jpg" alt="">
+    <img src="./assets/images/logo1 (1).jpg" alt="">
+    <img src="./assets/images/logo5 (1).jpg" alt="">
+    <img src="./assets/images/logo6 (1).jpg" alt="">
 </div>
 <div class="footer">
     <div class="info">
@@ -217,8 +217,8 @@
     <div class="info">
         <span style="color: #709b1d ; font-size:15pt;">CONTACT</span>
         <ul>
-            <li><i class="fa-solid fa-location-dot"></i>&nbsp;MIRPUR</li>
-            <li><i class="fa-solid fa-mobile-screen-button"></i>&nbsp;01646773574</li>
+            <li><i class="fas fa-search-location"></i>&nbsp;MIRPUR</li>
+            <li><i class="fa-solid fa-phone"></i>&nbsp;01646773574</li>
             <li><i class="fa-solid fa-envelope"></i>&nbsp;fbadhon789@gmail.com</li>
         </ul>
     </div>
@@ -230,19 +230,19 @@
          </button>
     </div>
     <div>
-    <img src="./assets/images/visa.jpg" alt="">
-    <img src="./assets/images/money.jpg" alt="">
-    <img src="./assets/images/american.jpg" alt="">
-    <img src="./assets/images/cirus.jpg" alt="">
+    <img src="./assets/images/visa (1).jpg" alt="">
+    <img src="./assets/images/money (1).jpg" alt="">
+    <img src="./assets/images/american (1).jpg" alt="">
+    <img src="./assets/images/cirus (1).jpg" alt="">
     </div>
     <div><button class="follow">
         FOLLOW US
      </button></div>
      <div>
-     <img src="./assets/images/fb.jpg" alt="">
-     <img src="./assets/images/twitter.jpg" alt="">
-     <img src="./assets/images/be.jpg" alt="">
-     <img src="./assets/images/link.jpg" alt="">
+     <img src="./assets/images/fb (1).jpg" alt="">
+     <img src="./assets/images/twitter (1).jpg" alt="">
+     <img src="./assets/images/be (1).jpg" alt="">
+     <img src="./assets/images/link (1).jpg" alt="">
      </div>
  </div>
 </div>
